# Reader_MAVLink

./: CMakeLists.txt  README.md
qml/: ConnectionPanel.qml  DataDisplay.qml  Main.qml  ParameterPanel.qml
src/: main.cpp  mavlinkhandler.cpp  mavlinkhandler.h  networkmanager.cpp  networkmanager.h
